<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:background="@color/light_grey"
    android:visibility="visible">

    <ImageView
        android:id="@+id/cover"
        android:layout_width="45dp"
        android:layout_height="100dp"
        android:layout_marginRight="6dip"
        android:layout_weight="0.35"
        android:background="@drawable/joker_affiche"
        android:contentDescription=""
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_titreFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:text="@string/titreSeance_Tv"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_realFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:text="@string/realisateur_Tv"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dureeFilm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/duree_Tv"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_langueFilm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:text="@string/langue_Tv"
                android:textAlignment="textEnd"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>