<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReservationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="@dimen/marge_exterieure_standard" >

        <ImageView
            android:id="@+id/Iv_AfficheFilm"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/marge_exterieure_standard"
            android:layout_weight="90"
            android:adjustViewBounds="true"
            android:contentDescription="@string/titreSeance2_Tv"
            android:scaleType="fitCenter"
            android:src="@drawable/joker_affiche" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="10">

            <TextView
                android:id="@+id/Tv_titreFilm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/marge_basse"
                android:text="@string/titreSeance2_Tv"
                android:textSize="@dimen/taille_police_grand"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Tv_heureSeance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/heureSeance_Tv"
                android:textAlignment="center"
                android:textSize="@dimen/taille_police_grand"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/Dv_LigneSeparation"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_margin="@dimen/marge_exterieure_standard" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Tv_NombrePlaces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marge_exterieure_standard"
            android:layout_weight="70"
            android:gravity="center"
            android:text="@string/nombrePlaces_Tv"
            android:textAlignment="textStart"
            android:textSize="@dimen/taille_police_grand"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Tv_Tarif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marge_exterieure_standard"
            android:layout_weight="35"
            android:gravity="center"
            android:text="@string/tarif_Tv"
            android:textSize="@dimen/taille_police_grand"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutTarifs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:baselineAligned="false"
        android:gravity="top"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayoutNombreTarifsMoitieGauche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linearLayoutNombreTarifs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marge_exterieure_standard"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="73dp"
                    android:layout_height="71dp">

                    <TextView
                        android:id="@+id/Tv_nombreTarifNormal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/nombrePlacesNormal_Tv"
                        android:textSize="@dimen/taille_police_grand"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="73dp"
                    android:layout_height="71dp">

                    <TextView
                        android:id="@+id/Tv_nombreTarifEtudiant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/nombrePlacesEtudiant_Tv"
                        android:textSize="@dimen/taille_police_grand"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="73dp"
                    android:layout_height="71dp">

                    <TextView
                        android:id="@+id/Tv_nombreTarifJeune"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/nombrePlacesJeune_Tv"
                        android:textSize="@dimen/taille_police_grand"
                        android:textStyle="bold" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutPlusTarifs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="73dp"
                    android:layout_height="71dp">


                    <Button
                        android:id="@+id/b_plusTarifNormal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/marge_exterieure_standard"
                        android:background="@color/dark_grey"
                        android:text="@string/plus_bt"
                        android:textColor="@color/white"
                        android:textSize="@dimen/taille_police_grand" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="73dp"
                    android:layout_height="71dp">

                    <Button
                        android:id="@+id/b_plusTarifEtudiant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/marge_exterieure_standard"
                        android:background="@color/dark_grey"
                        android:text="@string/plus_bt"
                        android:textColor="@color/white"
                        android:textSize="@dimen/taille_police_grand" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="73dp"
                    android:layout_height="71dp">

                    <Button
                        android:id="@+id/b_plusTarifJeune"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/marge_exterieure_standard"
                        android:background="@color/dark_grey"
                        android:text="@string/plus_bt"
                        android:textColor="@color/white"
                        android:textSize="@dimen/taille_police_grand" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutMinusTarifs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="73dp"
                    android:layout_height="71dp">

                    <Button
                        android:id="@+id/b_moinsTarifNormal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/marge_exterieure_standard"
                        android:background="@color/dark_grey"
                        android:text="@string/moins_bt"
                        android:textColor="@color/white"
                        android:textSize="@dimen/taille_police_grand" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="73dp"
                    android:layout_height="71dp">

                    <Button
                        android:id="@+id/b_moinsTarifEtudiant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/marge_exterieure_standard"
                        android:background="@color/dark_grey"
                        android:text="@string/moins_bt"
                        android:textColor="@color/white"
                        android:textSize="@dimen/taille_police_grand" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="73dp"
                    android:layout_height="71dp">

                    <Button
                        android:id="@+id/b_moinsTarifJeune"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/marge_exterieure_standard"
                        android:background="@color/dark_grey"
                        android:text="@string/moins_bt"
                        android:textColor="@color/white"
                        android:textSize="@dimen/taille_police_grand" />
                </FrameLayout>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayoutNombreTarifsMoitieDroite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linearLayoutNomTarifs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marge_exterieure_standard"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="73dp"
                    android:layout_height="71dp">

                    <TextView
                        android:id="@+id/Tv_nomTarifNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marge_exterieure_standard"
                        android:text="@string/nomTarifNormal_Tv"
                        android:textSize="@dimen/taille_police_moyen"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="73dp"
                    android:layout_height="71dp">

                    <TextView
                        android:id="@+id/Tv_nomTarifEtudiant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marge_exterieure_standard"
                        android:text="@string/nomTarifEtudiant_Tv"
                        android:textSize="@dimen/taille_police_moyen"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="73dp"
                    android:layout_height="71dp">

                    <TextView
                        android:id="@+id/Tv_nomTarifJeune"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marge_exterieure_standard"
                        android:text="@string/nomTarifJeune_Tv"
                        android:textSize="@dimen/taille_police_moyen"
                        android:textStyle="bold" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutCoutTarifs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="73dp"
                    android:layout_height="71dp">

                    <TextView
                        android:id="@+id/Tv_coutTarifNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/coutTarifNormal_Tv"
                        android:textSize="@dimen/taille_police_moyen"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="73dp"
                    android:layout_height="71dp">

                    <TextView
                        android:id="@+id/Tv_coutTarifEtudiant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/coutTarifEtudiant_Tv"
                        android:textSize="@dimen/taille_police_moyen"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="73dp"
                    android:layout_height="71dp">

                    <TextView
                        android:id="@+id/Tv_coutTarifJeune"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/coutTarifJeune_Tv"
                        android:textSize="@dimen/taille_police_moyen"
                        android:textStyle="bold" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_reserver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marge_exterieure_standard"
            android:layout_weight="60"
            android:background="@color/dark_grey"
            android:text="@string/reserver_bt"
            android:textSize="@dimen/taille_police_moyen"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>
